--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
   <div class="container">
     <header class="cabecalho">
       <div class="perfil">
-        <img class="perfil-foto" src="https://github.com/Mycristh.png" />
+        <img class="perfil-foto" src="https://github.com/Mycristh.png" rel="stylesheet" />
+        <script src="https://mycristh.github.io/Certificard_imersao.dev/scripts.js"></script>
         <div class="titulo">
           <h1>Mylena Oliveira</h1>
           <h3>Bibliotecária e Gestora da Informação</h3>
           <p>#imersaodev #alura</p>
+          <link href="https://mycristh.github.io/Certificard_imersao.dev/style.css"/>
         </div>
       </div>
       <div class="tema">
