--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <div class="container">
     <header class="cabecalho">
       <div class="perfil">
-        <img class="perfil-foto" 
-        <src="https://github.com/Mycristh.png" rel="stylesheet" />
+        <img class="perfil-foto" src="https://github.com/Mycristh.png" /> 
+        <link href="https://mycristh.github.io/Certificard_imersao.dev/style.css" rel="stylesheet" />
         <script src="https://mycristh.github.io/Certificard_imersao.dev/scripts.js"></script>
         <div class="titulo">
           <h1>Mylena Oliveira</h1>
